fix: there was a weird styling bug going on with the opening text z-index set to 1.

--- a/assets/styles/index/index.css
+++ b/assets/styles/index/index.css
@@ -5,6 +5,8 @@ body {
     font-size: 16px;
     margin-left: 0;
     margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
 }
 
 navbar {
@@ -98,9 +100,10 @@ navbar {
     opacity: .85;
     width: 100vw;
     padding: 2px;
-    margin-bottom: 3.3em;
+    margin-bottom: 6.7em;
+    /*margin-bottom: 3.3em;*/
     /* line-height: 5px;*/
-    z-index: 1;
+    /*z-index: 1;*/
 }
 
 
@@ -148,6 +151,10 @@ navbar {
 
 li {
     list-style-type: disc;
+}
+
+#experience a {
+  text-decoration: none;
 }
 
 .project_pic {
